[Win][WK2] Pressing space key on text input form scrolls the page https://bugs.webkit.org/show_bug.cgi?id=201632

Reviewed by Ross Kirsling.

r223262 was add WebPage::performDefaultBehaviorForKeyEvent for
Windows port by copying GTK port's implementation. But, Windows
port is using unique key event processing. It dispatches
WebEvent::RawKeyDown and WebEvent::Char separately even though
other ports dispatch only WebEvent::KeyDown by unifying them.

Because WebPage::performDefaultBehaviorForKeyEvent handled
WebEvent::RawKeyDown of space key to scroll page, and consumed the
event, the keypress event of space key wasn't dispatched.

The keypress event of a space key is handled in
EventHandler::defaultSpaceEventHandler.
performDefaultBehaviorForKeyEvent don't need to do it.

Tests: Coverted by fast/events/space-scroll-event.html

* WebProcess/WebPage/win/WebPageWin.cpp:
(WebKit::WebPage::performDefaultBehaviorForKeyEvent): Don't handle VK_SPACE.

Canonical link: https://commits.webkit.org/219630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254897 268f45cc-cd09-0410-ab3c-d52691b4dbfc